<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>de.greyshine</groupId>
	<artifactId>utils</artifactId>
	<version>0.1.0-SNAPSHOT</version>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<build>

		<finalName>greyshine-java-utils</finalName>

		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.3</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>

			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<!-- http://stackoverflow.com/a/15799254 -->
				<version>3.0.0</version>
				<executions>
					<execution>
						<id>build-publisher-characterscanner</id>
						<configuration>
							<appendAssemblyId>false</appendAssemblyId>
							<archive>
								<manifest>
									<mainClass>de.greyshine.tools.CharacterScanner</mainClass>
								</manifest>
							</archive>
							<descriptorRefs>
								<descriptorRef>jar-with-dependencies</descriptorRef>
							</descriptorRefs>
							<finalName>greyshine.characterscanner-${project.version}</finalName>
						</configuration>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
					<execution>
						<id>build-publisher-dencoder</id>
						<configuration>
							<appendAssemblyId>false</appendAssemblyId>
							<archive>
								<manifest>
									<mainClass>de.greyshine.tools.Dencoder</mainClass>
								</manifest>
							</archive>
							<descriptorRefs>
								<descriptorRef>jar-with-dependencies</descriptorRef>
							</descriptorRefs>
							<finalName>greyshine.dencoder-${project.version}</finalName>
						</configuration>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
					<execution>
						<id>build-publisher-trnsfrm</id>
						<configuration>
							<appendAssemblyId>false</appendAssemblyId>
							<archive>
								<manifest>
									<mainClass>de.greyshine.tools.Trnsfrm</mainClass>
								</manifest>
							</archive>
							<descriptorRefs>
								<descriptorRef>jar-with-dependencies</descriptorRef>
							</descriptorRefs>
							<finalName>greyshine.trnsfrm-${project.version}</finalName>
						</configuration>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.19.1</version>
				<!-- http://maven.apache.org/surefire/maven-surefire-plugin/examples/inclusion-exclusion.html -->
				<configuration>
					<properties>
						<property>
							<name>listener</name>
							<value></value>
						</property>
					</properties>
					<includes>
						<include>**/Test*.java</include>
						<include>**/*Test.java</include>
						<include>**/*TestCase.java</include>
						<include>**/*Tests.java</include>
						<include>**/*Tester.java</include>
					</includes>
				</configuration>
			</plugin>
			
			<plugin>
				<!-- http://gleclaire.github.io/findbugs-maven-plugin/usage.html -->
		    	<groupId>org.codehaus.mojo</groupId>
		    	<artifactId>findbugs-maven-plugin</artifactId>
		    	<version>3.0.4</version>
		     </plugin>
		     
		     <plugin>
		     	<!-- https://github.com/trautonen/coveralls-maven-plugin#readme -->
			    <groupId>org.eluder.coveralls</groupId>
			    <artifactId>coveralls-maven-plugin</artifactId>
			    <version>4.2.0</version>
			    <!-- 
			    <configuration>
			        <repoToken>yourcoverallsprojectrepositorytoken</repoToken>
			    </configuration>
			    -->
			</plugin>
		     
		     <plugin>
			    <groupId>org.jacoco</groupId>
			    <artifactId>jacoco-maven-plugin</artifactId>
			    <version>0.7.8</version>
			    <configuration>
	                <excludes>
	                    <exclude>de/greyshine/tools/*Test.java</exclude>
	                    <exclude>de/greyshine/tools/*Tests.java</exclude>
	                    <exclude>de/greyshine/tools/*Tester.java</exclude>
	                    <exclude>de/greyshine/utils/*Test.java</exclude>
	                    <exclude>de/greyshine/utils/*Tests.java</exclude>
	                    <exclude>de/greyshine/utils/*Tester.java</exclude>
	                </excludes>
				</configuration>
			    <executions>
			        <execution>
			            <id>prepare-agent</id>
			            <goals>
			                <goal>prepare-agent</goal>
			            </goals>
			        </execution>
			    </executions>
			</plugin>
			
		</plugins>
	</build>

	<dependencies>

		<!-- https://mvnrepository.com/artifact/commons-logging/commons-logging -->
		<dependency>
			<groupId>commons-logging</groupId>
			<artifactId>commons-logging</artifactId>
			<version>1.2</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/log4j/log4j -->
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/commons-cli/commons-cli -->
		<dependency>
			<groupId>commons-cli</groupId>
			<artifactId>commons-cli</artifactId>
			<version>1.3.1</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.xhtmlrenderer/flying-saucer-pdf -->
		<dependency>
			<groupId>org.xhtmlrenderer</groupId>
			<artifactId>flying-saucer-pdf</artifactId>
			<version>9.1.1</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.0</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
			<version>2.8.5</version>
		</dependency>
		
		<dependency>
			<groupId>org.thymeleaf</groupId>
			<artifactId>thymeleaf</artifactId>
			<version>3.0.3.RELEASE</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.mongodb/mongo-java-driver -->
		<dependency>
			<groupId>org.mongodb</groupId>
			<artifactId>mongo-java-driver</artifactId>
			<version>3.4.0</version>
			<type>jar</type>
			<scope>provided</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/junit/junit -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>

	</dependencies>
	
	<scm>
        <connection>scm:git:git@github.com:greyshine/utils.git</connection>
        <developerConnection>scm:git:git@github.com:greyshine/utils.git</developerConnection>
        <url>https://github.com/greyshine/utils</url>
        <tag>HEAD</tag>
	</scm>

</project>